--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "Bruce",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.1",
-    "ejs": "1.0.0",
-    "express": "~4.10.0",
-    "mongoose": "^4.1.1"
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "mongoose": "^4.5.10",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "session": "^0.1.0"
   }
 }
