--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "futgames",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "Bruce",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.2",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-session": "^1.14.1",
-    "mongoose": "^4.5.10",
-    "morgan": "^1.7.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "session": "^0.1.0"
-  }
+    "name": "futgames",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "author": "Bruce",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.3.0",
+        "body-parser": "^1.15.2",
+        "connect-flash": "^0.1.1",
+        "connect-mongo": "^1.3.2",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.14.0",
+        "express-session": "^1.14.1",
+        "mongoose": "^4.5.10",
+        "mongoose-unique-validator": "^1.0.2",
+        "mongoose-validators": "^0.1.0",
+        "morgan": "^1.7.0",
+        "passport": "^0.3.2",
+        "passport-local": "^1.0.0",
+        "session": "^0.1.0"
+    }
 }
